# mcp-conformance

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: gatehouse-profile.md  partner-adapters.md  reports.md  scenario-authoring.md
docs/site/: mdsvex.config.js  package-lock.json  package.json  svelte.config.js
fixtures/: README.md
scenarios/auth/: auth-code-pkce-happy-path.yaml  dcr-happy-path.yaml  denied-consent.yaml  invalid-redirect-uri.yaml  missing-pkce-challenge.yaml  reused-authorization-code.yaml  wrong-pkce-verifier.yaml
scenarios/bearer/: expired-token.yaml  insufficient-scope.yaml  invalid-token.yaml  missing-token.yaml  valid-token.yaml
scenarios/cimd/: fetch-timeout.yaml  happy-path.yaml  metadata-cache.yaml  mismatched-client-id.yaml  non-https-rejected.yaml
scenarios/dcr/: happy-path.yaml  invalid-scope.yaml  missing-redirect-uris.yaml  public-client-with-secret.yaml  unsupported-grant-type.yaml
scenarios/errors/: expired-token.yaml  insufficient-scope.yaml  unauthorized-request.yaml  unknown-scope.yaml  wrong-audience.yaml
scenarios/no-auth/: initialize-succeed.yaml  prompts-list-succeed.yaml  resources-list-succeed.yaml  tools-call-succeed.yaml  tools-list-succeed.yaml
scenarios/protocol/: resources-list-schema.yaml  tools-call-missing-arg.yaml  tools-call-unknown-tool.yaml  tools-call-valid.yaml  tools-list-schema.yaml
src/mcp_conformance/: __init__.py  cli.py  report.py  (+2 more)
tests/: conftest.py  test_assertions.py  test_scenario_parser.py
(+35 files in other folders)
