[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-conformance"
version = "0.1.0"
description = "Scenario-driven test runner for evaluating MCP client and server implementations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "rmax-ai"},
]

dependencies = [
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "jsonpath-ng>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
